--- a/requirements.yaml
+++ b/requirements.yaml
@@ -55,6 +55,7 @@ dependencies:
       - psutil==6.1.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
+      - pyarrow==18.1.0
       - pygments==2.18.0
       - pymongo==4.10.1
       - python-dateutil==2.9.0.post0
